Fix the alignment on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -435,6 +435,11 @@ textarea {
             padding: 0;
             margin: 0;
     }
+
+    .about-container .about-item {
+        padding: 0 4px;
+        margin: 0;
+    }
     
     #size-ceo {
             width: 90%;
